--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@microsoft/sp-office-ui-fabric-core": "1.16.1",
     "@microsoft/sp-property-pane": "1.16.1",
     "@microsoft/sp-webpart-base": "1.16.1",
+    "@pnp/polyfill-ie11": "^2.0.2",
     "@pnp/sp": "^2.11.0",
     "fluentui-react": "0.0.1",
     "office-ui-fabric-react": "^7.199.1",
@@ -31,6 +32,7 @@
     "react-modal": "^3.16.1",
     "react-read-more-read-less": "^1.0.7",
     "react-simple-star-rating": "^5.1.7",
+    "react-toastify": "^8.0.0",
     "read-more-less-react": "^1.1.3",
     "semantic-ui-react": "^2.1.4",
     "tslib": "2.3.1",
@@ -51,6 +53,7 @@
     "ajv": "^6.12.5",
     "eslint-plugin-react-hooks": "4.3.0",
     "gulp": "4.0.2",
+    "reactjs-countdown-hook": "^1.0.5",
     "read-more-react": "^1.0.10",
     "typescript": "4.5.5"
   }
