--- a/src/webparts/colabCooperativas/ColabCooperativasWebPart.manifest.json
+++ b/src/webparts/colabCooperativas/ColabCooperativasWebPart.manifest.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://developer.microsoft.com/json-schemas/spfx/client-side-web-part-manifest.schema.json",
   "id": "aa05fee6-afb0-4387-97ce-d6a69c22c491",
-  "alias": "ColabGeralNormativosWebPart",
+  "alias": "ColabCooperativasWebPart",
   "componentType": "WebPart",
 
   // The "*" signifies that the version should be taken from the package.json
@@ -18,11 +18,11 @@
   "preconfiguredEntries": [{
     "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Advanced
     "group": { "default": "Advanced" },
-    "title": { "default": "ColabGeralNormativos" },
-    "description": { "default": "ColabGeralNormativos description" },
+    "title": { "default": "ColabCooperativas" },
+    "description": { "default": "ColabCooperativas description" },
     "officeFabricIconFontName": "Page",
     "properties": {
-      "description": "ColabGeralNormativos"
+      "description": "ColabCooperativas"
     }
   }]
 }
