--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@microsoft/generator-sharepoint": "^1.16.1",
     "@microsoft/sp-core-library": "1.16.1",
     "@microsoft/sp-lodash-subset": "1.16.1",
     "@microsoft/sp-office-ui-fabric-core": "1.16.1",
@@ -55,6 +56,7 @@
     "gulp": "4.0.2",
     "reactjs-countdown-hook": "^1.0.5",
     "read-more-react": "^1.0.10",
-    "typescript": "4.5.5"
+    "typescript": "4.5.5",
+    "@types/react": "17.0.45"
   }
 }
