--- a/config/config.json
+++ b/config/config.json
@@ -40,6 +40,7 @@
     "ColabNormativosWebPartStrings": "lib/webparts/elaboraVoto/loc/{locale}.js",
     "VotoNormativosWebPartStrings": "lib/webparts/elaboraVoto/loc/{locale}.js",
     "ColabCooperativasWebPartStrings": "lib/webparts/elaboraVoto/loc/{locale}.js",
-    "TarefaCentraisWebPartStrings": "lib/webparts/tarefaCentrais/loc/{locale}.js"
+    "TarefaCentraisWebPartStrings": "lib/webparts/tarefaCentrais/loc/{locale}.js",
+    "ControlStrings": "node_modules/@pnp/spfx-controls-react/lib/loc/{locale}.js"
   }
 }
