--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@microsoft/sp-webpart-base": "1.16.1",
     "@pnp/polyfill-ie11": "^2.0.2",
     "@pnp/sp": "^2.11.0",
+    "@pnp/spfx-controls-react": "^3.13.0",
     "fluentui-react": "0.0.1",
     "office-ui-fabric-react": "^7.199.1",
     "react": "17.0.1",
