--- a/src/webparts/tarefaSingulares/TarefaSingularesWebPart.manifest.json
+++ b/src/webparts/tarefaSingulares/TarefaSingularesWebPart.manifest.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://developer.microsoft.com/json-schemas/spfx/client-side-web-part-manifest.schema.json",
-  "id": "bd9eb698-c91c-45db-b7dd-33e16e95fc67",
-  "alias": "TarefaComplianceWebPart",
+  "id": "50ffae93-d057-4bb9-a81b-f03b5a53e55d",
+  "alias": "TarefaSingularesWebPart",
   "componentType": "WebPart",
 
   // The "*" signifies that the version should be taken from the package.json
@@ -18,11 +18,11 @@
   "preconfiguredEntries": [{
     "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Advanced
     "group": { "default": "Advanced" },
-    "title": { "default": "tarefaCompliance" },
-    "description": { "default": "tarefaCompliance description" },
+    "title": { "default": "tarefaSingulares" },
+    "description": { "default": "tarefaSingulares description" },
     "officeFabricIconFontName": "Page",
     "properties": {
-      "description": "tarefaCompliance"
+      "description": "tarefaSingulares"
     }
   }]
 }
